--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div>
-            <img src="/logo.svg" alt="logo" class="mx-auto pt-[70px] pb-[40px] w-[200px] sm:w-[300px]">
+            <img src="logo.svg" alt="logo" class="mx-auto pt-[70px] pb-[40px] w-[200px] sm:w-[300px]">
         </div> 
         <div>
             <p class="font-extralight text-3xl sm:text-5xl text-[#797777] text-center mb-[20px]">
@@ -33,17 +33,17 @@
             <div id="message" class="mt-[10px] text-red-600 text-sm mx-auto"></div>
         </div>
         <div>
-            <img src="/illustration-dashboard.png" alt="dashboard" class="w-full sm:w-[800px] mx-auto">
+            <img src="illustration-dashboard.png" alt="dashboard" class="w-full sm:w-[800px] mx-auto">
         </div>
     </main>
     <footer>
         <div class="flex justify-center mt-[90px] gap-[10px]">
-            <a href=""><img src="/facebook-svgrepo-com.svg" alt="facebook" class="w-[25px] sm:w-[30px]"></a>
-            <a href=""><img src="/twitter-svgrepo-com (1).svg" alt="twitter" class="w-[25px] sm:w-[30px]"></a>
-            <a href=""><img src="/instagram_6422200.svg" alt="instagram" class="w-[25px] sm:w-[30px]"></a>
+            <a href=""><img src="facebook-svgrepo-com.svg" alt="facebook" class="w-[25px] sm:w-[30px]"></a>
+            <a href=""><img src="twitter-svgrepo-com (1).svg" alt="twitter" class="w-[25px] sm:w-[30px]"></a>
+            <a href=""><img src="instagram_6422200.svg" alt="instagram" class="w-[25px] sm:w-[30px]"></a>
         </div>
         <div class="text-sm text-center mt-[20px] mb-[30px]">@Copyright Ping. All rights reserved</div>
     </footer>
-    <script src="/ping.js"></script>
+    <script src="ping.js"></script>
 </body>
 </html>
